Created html for names. css for those pages aswell. And added about page.

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../styles/restaurant_page.css" /> 
+    <link rel="stylesheet" type="text/css" href="../styles/about.css" /> 
     <link rel="stylesheet" type="text/css" href="../../header/header.css" /> 
     <script type=module src="header/header.js"></script>
-    <title>Tacos Rustico</title>
+    <title>Barrio Brewing Co.</title>
 </head>
 
 <header>
@@ -16,14 +16,14 @@
         </div>
         <p class="title">Tucson Eats</p>
         <div>
-            <a href="about_us.html">About Us</a>
+            <a href="about.html">About Us</a>
         </div>
     </nav>
 </header>
 
 <body> 
     <div class="container">
-        <p>Tacos Rustico page</p>
+        <p>About us page</p>
     </div>
 </body>
 </html>
