--- a/src/html/bisonwitches.html
+++ b/src/html/bisonwitches.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="../styles/restaurant_page.css" /> 
     <link rel="stylesheet" type="text/css" href="../../header/header.css" /> 
     <script type=module src="header/header.js"></script>
-    <title>Tacos Rustico</title>
+    <title>Aqui con El Nene</title>
 </head>
 
 <header>
@@ -23,7 +23,7 @@
 
 <body> 
     <div class="container">
-        <p>Tacos Rustico page</p>
+        <p>Bison Witches Page</p>
     </div>
 </body>
 </html>
