--- a/src/html/barrio.html
+++ b/src/html/barrio.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="../styles/restaurant_page.css" /> 
     <link rel="stylesheet" type="text/css" href="../../header/header.css" /> 
     <script type=module src="header/header.js"></script>
-    <title>Tacos Rustico</title>
+    <title>Barrio Brewing Co.</title>
 </head>
 
 <header>
@@ -16,14 +16,14 @@
         </div>
         <p class="title">Tucson Eats</p>
         <div>
-            <a href="about_us.html">About Us</a>
+            <a href="about.html">About Us</a>
         </div>
     </nav>
 </header>
 
 <body> 
     <div class="container">
-        <p>Tacos Rustico page</p>
+        <p>Barrio page</p>
     </div>
 </body>
 </html>
