--- a/src/html/lachingada.html
+++ b/src/html/lachingada.html
@@ -3,8 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barrio Brewing Co.</title>
+    <link rel="stylesheet" type="text/css" href="../styles/restaurant_page.css" /> 
+    <link rel="stylesheet" type="text/css" href="../../header/header.css" /> 
+    <script type=module src="header/header.js"></script>
+    <title>La Chingada</title>
 </head>
+
+<header>
+    <nav class="head">
+        <div>
+            <a href="../../index.html">Restaurants</a>
+        </div>
+        <p class="title">Tucson Eats</p>
+        <div>
+            <a href="about_us.html">About Us</a>
+        </div>
+    </nav>
+</header>
+
 <body> 
+    <div class="container">
+        <p>La Chingada Page</p>
+    </div>
 </body>
 </html>
