added Maico Restaurant to homepage

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
             </div>
         </button>
 
-        <button onclick="window.location.href='add link here'" class="card">
-            <img src="" alt="">
+        <button onclick="window.location.href='src/html/maico.html'" class="card">
+            <img src="src/imgs/maico.jpeg" alt="Maico Main">
             <div class="info">
-                <div class="name"><p>Restaurant Name here</p></div>
+                <div class="name"><p>Maico</p></div>
                 <p><span class="stars">★★★★★</span></p>
-                <p>Description here</p>
+                <p>Hole in the wall, family owned outdoor Mexican restaurant since 1995. Looks like hell, tastes like heaven. </p>
             </div>
         </button>
     </div>
