persistant header now being used from header folder

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -4,24 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../styles/about.css" /> 
-    <link rel="stylesheet" type="text/css" href="../../header/header.css" /> 
-    <script type=module src="header/header.js"></script>
-    <title>Barrio Brewing Co.</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <title>About Us</title>
 </head>
 
-<header>
-    <nav class="head">
-        <div>
-            <a href="../../index.html">Restaurants</a>
-        </div>
-        <p class="title">Tucson Eats</p>
-        <div>
-            <a href="about.html">About Us</a>
-        </div>
-    </nav>
-</header>
-
 <body> 
+    <!-- you will have a terrible day if you remove these 2 scrips -->
+    <script src="../../header/headerCSS.js"></script>
+    <script src="../../header/headerHTML.js"></script>
+
     <div class="container">
         <p>About us page</p>
     </div>
