--- a/src/html/maico.html
+++ b/src/html/maico.html
@@ -4,24 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../styles/restaurant_page.css" /> 
-    <link rel="stylesheet" type="text/css" href="../../header/header.css" /> 
-    <script type=module src="header/header.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Maico</title>
 </head>
 
-<header>
-    <nav class="head">
-        <div>
-            <a href="../../index.html">Restaurants</a>
-        </div>
-        <p class="title">Tucson Eats</p>
-        <div>
-            <a href="about_us.html">About Us</a>
-        </div>
-    </nav>
-</header>
-
-<body> 
+<body>
+    <script src="../../header/headerCSS.js"></script>
+    <script src="../../header/headerHTML.js"></script>
     <div class="container">
         <p>Maico page</p>
     </div>
