--- a/src/html/about.html
+++ b/src/html/about.html
@@ -1,20 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../styles/about.css" /> 
+    <link rel="stylesheet" type="text/css" href="../styles/about.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>About Us</title>
 </head>
 
-<body> 
+<body>
     <!-- you will have a terrible day if you remove these 2 scrips -->
     <script src="../../header/headerCSS.js"></script>
     <script src="../../header/headerHTML.js"></script>
 
-    <div class="container">
-        <p>About us page</p>
+    <div class="about-container">
+        <div class="box" id="team">
+            <h2>The Team</h2>
+            <div class="team-member">
+                <p>Kieran Chafin</p>
+            </div>
+            <div class="team-member">
+                <p>Elliot Seo</p>
+            </div>
+            <div class="team-member">
+                <p>Koby Kresse</p>
+            </div>
+            <div class="team-member">
+                <p>Ceci Nguyen</p>
+            </div>
+            <div class="team-member">
+                <p>Kyle Edison</p>
+            </div>
+            <div class="team-member">
+                <p>Abel Toledo</p>
+            </div>
+            <div class="team-member">
+                <p>Jacob Castillo</p>
+            </div>
+            <div class="team-member">
+                <p>Michael Rafko</p>
+            </div>
+            <div class="team-member">
+                <p>Tobin Nickels</p>
+            </div>
+        </div>
+        <div class="box" id="info">
+            <h2>Why?</h2>
+        </div>
     </div>
 </body>
+
 </html>
