--- a/src/html/about.html
+++ b/src/html/about.html
@@ -18,35 +18,47 @@
         <div class="box" id="team">
             <h2>The Team</h2>
             <div class="team-member">
-                <p>Kieran Chafin</p>
+                <p>Kieran Chafin dymi-dev</p>
             </div>
             <div class="team-member">
-                <p>Elliot Seo</p>
+                <p>Elliot Seo eloote97</p>
             </div>
             <div class="team-member">
-                <p>Koby Kresse</p>
+                <p>Koby Kresse kressekoby</p>
             </div>
             <div class="team-member">
                 <p>Ceci Nguyen</p>
             </div>
             <div class="team-member">
-                <p>Kyle Edison</p>
+                <p>Kyle Edison KyleElison</p>
             </div>
             <div class="team-member">
-                <p>Abel Toledo</p>
+                <p>Abel Toledo toledo1-j</p>
             </div>
             <div class="team-member">
                 <p>Jacob Castillo</p>
             </div>
             <div class="team-member">
-                <p>Michael Rafko</p>
+                <p>Michael Rafko mrafko</p>
             </div>
             <div class="team-member">
-                <p>Tobin Nickels</p>
+                <p>Tobin Nickels tobinnickels</p>
             </div>
         </div>
         <div class="box" id="info">
             <h2>Why?</h2>
+            <div class="summary">
+                <p>As many of us are locals to Tucson, we want to express our love for the hidden gems that it has to offer.
+                    Tucson is rich with food culture that many people overlook, and we would love to shine light on places that
+                    have made impacts in our lives.
+                </p>
+            </div>
+            <div class="disclaimer">
+                <p>Note: This is a University of Arizona project for class ISTA 302, Web Development.</p>
+            </div>
+            <div class="github">
+                <p>Github: https://github.com/eloote97/ista329-project.git</p>
+            </div>
         </div>
     </div>
 </body>
