ok last commit i swear :)

--- a/src/html/lachingada.html
+++ b/src/html/lachingada.html
@@ -47,7 +47,15 @@
                 </ul>
             </div>
         </div>
-        
+    </div>
+    <div class="container2">
+        <div class="card">
+            <img class="img1" src="../imgs/lachingada_imgs/1x1chilaquiles-divorciados.jpg" alt="">
+        </div>
+        <div class="card">
+        </div>
+        <div class="card">
+        </div>
     </div>
 </body>
 </html>
