restaurant page draft complete. looks kinda bland but o well. sizing works for container2, not yet for container 1.

--- a/src/html/lachingada.html
+++ b/src/html/lachingada.html
@@ -21,7 +21,7 @@
                     <a href="tel:5208678441">520-867-8441</a>
                     <a href="https://www.google.com/maps/place/La+Chingada+Cocina+Mexicana/@32.2228644,-110.9699213,16z/data=!4m15!1m8!3m7!1s0x86d671803511d3df:0x133b8b69ef161f25!2sLa+Chingada+Cocina+Mexicana!8m2!3d32.2230925!4d-110.9696029!10e5!16s%2Fg%2F11qpr81wl8!3m5!1s0x86d671803511d3df:0x133b8b69ef161f25!8m2!3d32.2230925!4d-110.9696029!16s%2Fg%2F11qpr81wl8?entry=ttu">110 E PENNINGTON ST.</a>
                 </div>
-                <p>La Chingada strives to offer the best Mexican food in Tucson with inviting hospitality and vibrant atmosphere for an unforgettable and authentic taste of Mexico. Using locally sourced ingredients to capture the true authentic flavors of Tucson, serving some amazing margaritas, and a prime downtown location, this place is definitely worth a visit!</p>
+                <p class="description">La Chingada strives to offer the best Mexican food in Tucson with inviting hospitality and vibrant atmosphere for an unforgettable and authentic taste of Mexico. Using locally sourced ingredients to capture the true authentic flavors of Tucson, serving some amazing margaritas, and a prime downtown location, this place is definitely worth a visit!</p>
             </div>
         </div>
         <div class="card">
@@ -50,11 +50,31 @@
     </div>
     <div class="container2">
         <div class="card">
-            <img class="img1" src="../imgs/lachingada_imgs/1x1chilaquiles-divorciados.jpg" alt="">
+            <img class="img" src="../imgs/lachingada_imgs/1x1chilaquiles-divorciados.jpg" alt="">
         </div>
         <div class="card">
+            <div class="review">
+                <p>"You need to check out La Chingada Cocina... they're dishing up some of the best Mexican Food in Tucson"</p>
+                <p class="person">- Tucson Foodie</p>
+            </div>
         </div>
         <div class="card">
+            <img class="img" src="../imgs/lachingada_imgs/1x1-lorenza-de-ribeye.jpg.webp" alt="">
+        </div>
+        <div class="card">
+            <div class="review">
+                <p>"The quality, service, and taste of everything over exceeded my expectations. The staff truly cares about your experience."</p>
+                <p class="person">- Leilani Santillan (Takes on Tucson)</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="img" src="../imgs/lachingada_imgs/1x1-quesabirria-tacos2.jpg.webp" alt="">
+        </div>
+        <div class="card">
+            <div class="review">
+                <p>"Everything about this experience was amazing I cannot recommend it enough. The atmosphere felt welcoming, service was beyond expectations and the food was not only delicious but also beautiful."</p>
+                <p class="person">- Stephen Harlan</p>
+            </div>
         </div>
     </div>
 </body>
