Added barrio brewing co resturant
Added the content for  barrio brewing co resturant as well as some images

--- a/src/html/barrio.html
+++ b/src/html/barrio.html
@@ -8,11 +8,74 @@
     <title>Barrio Brewing Co.</title>
 </head>
 
-<body> 
+<body>
     <script src="../../header/headerCSS.js"></script>
     <script src="../../header/headerHTML.js"></script>
+
     <div class="container">
-        <p>Barrio page</p>
+        <div class="card">
+            <div class="main">
+                <h1>BARRIO BREWING CO.</h1>
+                <div class="link">
+                    <a href="https://barriobrewing.com/">WEBSITE</a>
+                    <a href="tel:5207912739">520-791-2739</a>
+                    <a href="https://www.google.com/maps/place/Barrio+Brewing+Co./@32.2179052,-110.9695975,17z/data=!3m1!4b1!4m5!3m4!1s0x86d671862076175f:0x853bdf9b9a4d55ef!8m2!3d32.2179008!4d-110.9674088">800 E 16th St,</a>
+                </div>
+                <p class="description">Barrio Brewing Co. is a beloved Tucson brewery offering a wide selection of craft beers and delicious pub fare. Located in a historic building, Barrio Brewing Co. provides a cozy atmosphere where patrons can enjoy great company and even better brews. Whether you're a beer enthusiast or just looking for a relaxing hangout spot, Barrio Brewing Co. has something for everyone.</p>
+            </div>
+        </div>
+        <div class="card">
+            <h2>HOURS</h2>
+            <div class="hours">
+                <ul class="days">
+                    <li>Sun</li>
+                    <li>Mon</li>
+                    <li>Tue</li>
+                    <li>Wed</li>
+                    <li>Thu</li>
+                    <li>Fri</li>
+                    <li>Sat</li>
+                </ul>
+                <ul class="times">
+                    <li>11AM - 10PM</li>
+                    <li>11AM - 10PM</li>
+                    <li>11AM - 10PM</li>
+                    <li>11AM - 10PM</li>
+                    <li>11AM - 10PM</li>
+                    <li>11AM - 11PM</li>
+                    <li>11AM - 11PM</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="container2">
+        <div class="card">
+            <img class="img" src="..\imgs\barrio_imgs\barrio_outside.jpg" alt="An image of what barrio brewing company looks like on the outside">
+        </div>
+        <div class="card">
+            <div class="review">
+                <p>"Barrio Brewing Co. is a gem in Tucson. Their craft beers are top-notch, and the atmosphere is always lively. A must-visit for any beer enthusiast!"</p>
+                <p class="person">- John Smith</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="img" src="..\imgs\barrio_imgs\barrio_bar.jpg" alt="An image of what the bar looks like at barrio brewing company">
+        </div>
+        <div class="card">
+            <div class="review">
+                <p>"I love Barrio Brewing Co.! Their pizzas are delicious, and they pair perfectly with their selection of beers. Great place to hang out with friends!"</p>
+                <p class="person">- Emily Johnson</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="img" src="..\imgs\barrio_imgs\barrio_dining.jpg" alt="An image of what the dining room looks like at barrio brewing company">
+        </div>
+        <div class="card">
+            <div class="review">
+                <p>"The ambiance at Barrio Brewing Co. is fantastic. Whether you're indoors or out on the patio, it's always a great experience. Plus, their staff is friendly and knowledgeable about their beers!"</p>
+                <p class="person">- Michael Rodriguez</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
