Added El Rustico
Filled out the resturant info for el rusticos

--- a/src/html/rustico.html
+++ b/src/html/rustico.html
@@ -8,12 +8,74 @@
     <title>Tacos Rustico</title>
 </head>
 
-<body> 
+<body>
     <script src="../../header/headerCSS.js"></script>
     <script src="../../header/headerHTML.js"></script>
-    
+
     <div class="container">
-        <p>Tacos Rustico page</p>
+        <div class="card">
+            <div class="main">
+                <h1>TACOS RUSTICO</h1>
+                <div class="link">
+                    <a href="https://www.tacorustico.com/">WEBSITE</a>
+                    <a href="tel:5206233478">(520) 623-3478</a>
+                    <a href="https://www.google.com/maps/place/El+Taco+Rustico/@32.2490698,-110.9811222,17z/data=!3m1!4b1!4m6!3m5!1s0x86d6719d3300cb99:0xa0b7627aec6eb55e!8m2!3d32.2490653!4d-110.9785473!16s%2Fg%2F11jfq9pvbf?entry=ttu">2281 N Oracle Rd</a>
+                </div>
+                <p class="description">Tacos Rustico is a cozy taco spot located in the heart of Tucson. Known for their authentic flavors and fresh ingredients, Tacos Rustico offers a variety of tacos, burritos, and other Mexican delights. Whether you're craving carne asada, al pastor, or vegetarian options, Tacos Rustico has something to satisfy every palate.</p>
+            </div>
+        </div>
+        <div class="card">
+            <h2>HOURS</h2>
+            <div class="hours">
+                <ul class="days">
+                    <li>Sun</li>
+                    <li>Mon</li>
+                    <li>Tue</li>
+                    <li>Wed</li>
+                    <li>Thu</li>
+                    <li>Fri</li>
+                    <li>Sat</li>
+                </ul>
+                <ul class="times">
+                    <li>7AM - 9PM</li>
+                    <li>Closed</li>
+                    <li>7AM - 9PM</li>
+                    <li>7AM - 9PM</li>
+                    <li>7AM - 9PM</li>
+                    <li>7AM - 9PM</li>
+                    <li>7AM - 9PM</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="container2">
+        <div class="card">
+            <img class="img" src="..\imgs\rustico_imgs\rustico_chef.jpg" alt="">
+        </div>
+        <div class="card">
+            <div class="review">
+                <p>"Absolutely delicious tacos! The carne asada is flavorful and tender, and the salsa adds the perfect kick. I could eat here every day!"</p>
+                <p class="person">- Maria Gonzalez</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="img" src="..\imgs\rustico_imgs\rustico_closeup_tacos.jpg" alt="">
+        </div>
+        <div class="card">
+            <div class="review">
+                <p>"Tacos Rustico never disappoints. Their tacos are always fresh and bursting with flavor. I highly recommend trying the al pastor!"</p>
+                <p class="person">- Javier Rodriguez</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="img" src="..\imgs\rustico_imgs\rustico_sign.jpg" alt="">
+        </div>
+        <div class="card">
+            <div class="review">
+                <p>"Best tacos in town! The staff is friendly, the prices are reasonable, and the food is consistently delicious. I'm a regular customer for a reason!"</p>
+                <p class="person">- Emily Smith</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
