Completed Bison Witches page with information and added an a tag on the About Us section.

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -57,7 +57,7 @@
                 <p>Note: This is a University of Arizona project for class ISTA 302, Web Development.</p>
             </div>
             <div class="github">
-                <p>Github: https://github.com/eloote97/ista329-project.git</p>
+                <a href="https://github.com/eloote97/ista329-project.git">Github</a>
             </div>
         </div>
     </div>
