--- a/src/html/elnene.html
+++ b/src/html/elnene.html
@@ -8,11 +8,74 @@
     <title>Aqui con El Nene</title>
 </head>
 
-<body> 
+<body>
     <script src="../../header/headerCSS.js"></script>
     <script src="../../header/headerHTML.js"></script>
+
     <div class="container">
-        <p>El Nene page</p>
+        <div class="card">
+            <div class="main">
+                <h1>AQUI CON EL NENE</h1>
+                <div class="link">
+                    <a href="https://www.aquiconelnene.com/">WEBSITE</a>
+                    <a href="tel:5208895338">(520)-889-5338</a>
+                    <a href="https://www.google.com/maps/place/Aqui+Con+El+Nene+Restaurant/@32.1336744,-110.9715166,17z/data=!3m1!4b1!4m6!3m5!1s0x86d67bb47c20fe25:0x6245e8088de803a8!8m2!3d32.1336699!4d-110.9689417!16s%2Fg%2F11c0qfw5n3?entry=ttu">65 W. Valencia RD</a>
+                </div>
+                <p class="description">Aqui con El Nene is a beloved taco truck in Tucson, serving up authentic Mexican street food with a smile. From tacos to burritos to quesadillas, everything on the menu is made with fresh, high-quality ingredients and bursting with flavor. Whether you're grabbing a quick bite on the go or enjoying a leisurely meal with friends, Aqui con El Nene is sure to satisfy your cravings for delicious Mexican cuisine.</p>
+            </div>
+        </div>
+        <div class="card">
+            <h2>HOURS</h2>
+            <div class="hours">
+                <ul class="days">
+                    <li>Sun</li>
+                    <li>Mon</li>
+                    <li>Tue</li>
+                    <li>Wed</li>
+                    <li>Thu</li>
+                    <li>Fri</li>
+                    <li>Sat</li>
+                </ul>
+                <ul class="times">
+                    <li>Closed</li>
+                    <li>10AM - 11PM</li>
+                    <li>10AM - 11PM</li>
+                    <li>10AM - 11PM</li>
+                    <li>10AM - 11PM</li>
+                    <li>10AM - 12AM</li>
+                    <li>10AM - 12AM</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="container2">
+        <div class="card">
+            <img class="img" src="..\imgs\elnene_imgs\nene_menu.jpg" alt="An image of the Aqui Con El Nene menu">
+        </div>
+        <div class="card">
+            <div class="review">
+                <p>"Aqui con El Nene never disappoints! The tacos are always fresh and flavorful, and the service is top-notch. I highly recommend the carne asada tacos!"</p>
+                <p class="person">- Maria Lopez</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="img" src="..\imgs\elnene_imgs\nene_outside.jpg" alt="The exterior of Aqui Con El Nene Restaurant">
+        </div>
+        <div class="card">
+            <div class="review">
+                <p>"I'm a huge fan of Aqui con El Nene! The food is consistently delicious, and the prices are very reasonable. Their salsa verde is the perfect accompaniment to any taco!"</p>
+                <p class="person">- Javier Martinez</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="img" src="..\imgs\elnene_imgs\nene_sanoranDog.jpg" alt="A Sanoran Hotdog from Aqui Con El Nene Restaurant">
+        </div>
+        <div class="card">
+            <div class="review">
+                <p>"I stumbled upon Aqui con El Nene while exploring Tucson, and I'm so glad I did! The tacos are amazing, and the staff is incredibly friendly. Don't miss out on this gem!"</p>
+                <p class="person">- Emily Johnson</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
