Filled out Maicos resturant
Filled out the Maicos resturant information

--- a/src/html/maico.html
+++ b/src/html/maico.html
@@ -5,14 +5,77 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../styles/restaurant_page.css" /> 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <title>Maico</title>
+    <title>Maico's Mexican Restaurant</title>
 </head>
 
 <body>
     <script src="../../header/headerCSS.js"></script>
     <script src="../../header/headerHTML.js"></script>
+
     <div class="container">
-        <p>Maico page</p>
+        <div class="card">
+            <div class="main">
+                <h1>MAICO'S MEXICAN RESTAURANT</h1>
+                <div class="link">
+                    <a href="https://sites.google.com/view/maicorestaurantaz">WEBSITE</a>
+                    <a href="tel:5202942836">(520)-294-2836</a>
+                    <a href="https://www.google.com/maps/dir//maico+tucson/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x86d670f384209787:0xf11b7e988ac3d118?sa=X&ved=1t:3061&ictx=111">835 E 22nd St</a>
+                </div>
+                <p class="description">Maico's Mexican Restaurant brings the vibrant flavors of Mexico to Tucson with its authentic dishes and warm hospitality. From savory tacos to hearty enchiladas, each dish is prepared with care and traditional Mexican spices. Whether you're dining in for a family meal or grabbing takeout for a quick bite, Maico's Mexican Restaurant offers a taste of home-cooked Mexican cuisine.</p>
+            </div>
+        </div>
+        <div class="card">
+            <h2>HOURS</h2>
+            <div class="hours">
+                <ul class="days">
+                    <li>Sun</li>
+                    <li>Mon</li>
+                    <li>Tue</li>
+                    <li>Wed</li>
+                    <li>Thu</li>
+                    <li>Fri</li>
+                    <li>Sat</li>
+                </ul>
+                <ul class="times">
+                    <li>6AM - 8PM</li>
+                    <li>6AM - 9PM</li>
+                    <li>6AM - 9PM</li>
+                    <li>6AM - 9PM</li>
+                    <li>6AM - 9PM</li>
+                    <li>6AM - 9PM</li>
+                    <li>6AM - 9PM</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="container2">
+        <div class="card">
+            <img class="img" src="..\imgs\maico_imgs\maico_exterior.jpg" alt="The exterior view of Maicos">
+        </div>
+        <div class="card">
+            <div class="review">
+                <p>"Maico's Mexican Restaurant serves up some of the best Mexican food in Tucson! The flavors are authentic, the portions are generous, and the service is always friendly. Highly recommend the carne asada tacos!"</p>
+                <p class="person">- Maria Gonzalez</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="img" src="..\imgs\maico_imgs\maicos_tacos.jpg" alt="A plate of tacos">
+        </div>
+        <div class="card">
+            <div class="review">
+                <p>"I've been coming to Maico's Mexican Restaurant for years, and it never disappoints. The salsa is always fresh, the chips are crispy, and the enchiladas are to die for. A must-visit for Mexican food lovers!"</p>
+                <p class="person">- Javier Rodriguez</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="img" src="..\imgs\maico_imgs\maico_sign.jpg" alt="The sign that Maicos Mexican Resturtant has up.">
+        </div>
+        <div class="card">
+            <div class="review">
+                <p>"Maico's Mexican Restaurant has become our go-to spot for family dinners. The food is consistently delicious, and the atmosphere is warm and inviting. We love the variety of dishes on the menu!"</p>
+                <p class="person">- Emily Johnson</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
