--- a/src/html/about.html
+++ b/src/html/about.html
@@ -30,7 +30,7 @@
                 <p>Ceci Nguyen</p>
             </div>
             <div class="team-member">
-                <p>Kyle Edison KyleElison</p>
+                <p>Kyle Elison KyleElison</p>
             </div>
             <div class="team-member">
                 <p>Abel Toledo toledo1-j</p>
