varying star ratings

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <img src="src/imgs/barrio_imgs/barrio_main.jpeg" alt="https://barriobrewing.html">
             <div class="info">
                 <div class="name"><p>Barrio Brewing Co.</p></div>
-                <p><span class="stars">★★★★★</span></p>
+                <p><span class="stars">★★★★☆</span></p>
                 <p>Rustic-chic brewpub with well-known happy-hour specials, shuffleboard & up to 12 house beers on tap.</p>
             </div>  
         </button>  
@@ -53,7 +53,7 @@
             <img src="src/imgs/elnene_imgs/elnene_main.jpeg" alt="https://www.aquiconelnene.com/menu">
             <div class="info">
                 <div class="name"><p> Aqui Con el Nene</p></div>
-                <p><span class="stars">★★★★★</span></p>
+                <p><span class="stars">★★★★☆</span></p>
                 <p>Mexican style food cart offering authentic sonoran hot dogs, tacos, burritos and more.</p>
             </div>
         </button>
