changed formatting of about page to match rest of site

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -27,7 +27,7 @@
                 <p>Koby Kresse kressekoby</p>
             </div>
             <div class="team-member">
-                <p>Ceci Nguyen</p>
+                <p>Ceci Nguyen cecilianguyen1</p>
             </div>
             <div class="team-member">
                 <p>Kyle Elison KyleElison</p>
