--- a/src/html/lachingada.html
+++ b/src/html/lachingada.html
@@ -27,24 +27,40 @@
         <div class="card">
             <h2>HOURS</h2>
             <div class="hours">
-                <ul class="days">
-                    <li>Sun</li>
-                    <li>Mon</li>
-                    <li>Tue</li>
-                    <li>Wed</li>
-                    <li>Thu</li>
-                    <li>Fri</li>
-                    <li>Sat</li>
-                </ul>
-                <ul class="times">
-                    <li>9AM - 3PM, 5PM - 10PM</li>
-                    <li>9AM - 3PM</li>
-                    <li>9AM - 3PM, 5PM - 10PM</li>
-                    <li>9AM - 3PM, 5PM - 10PM</li>
-                    <li>9AM - 3PM, 5PM - 10PM</li>
-                    <li>9AM - 3PM, 5PM - 12AM</li>
-                    <li>9AM - 3PM, 5PM - 12AM</li>
-                </ul>
+                <table class="hours-table">
+                    <tr>
+                        <th>Day</th>
+                        <th>Hours</th>
+                    </tr>
+                    <tr>
+                        <td>Sun</td>
+                        <td>9:00 AM - 3:00 PM, 5:00 PM - 10:00 PM</td>
+                    </tr>
+                    <tr>
+                        <td>Mon</td>
+                        <td>9:00 AM - 3:00 PM</td>
+                    </tr>
+                    <tr>
+                        <td>Tue</td>
+                        <td>9:00 AM - 3:00 PM, 5:00 PM - 10:00 PM</td>
+                    </tr>
+                    <tr>
+                        <td>Wed</td>
+                        <td>9:00 AM - 3:00 PM, 5:00 PM - 10:00 PM</td>
+                    </tr>
+                    <tr>
+                        <td>Thu</td>
+                        <td>9:00 AM - 3:00 PM, 5:00 PM - 10:00 PM</td>
+                    </tr>
+                    <tr>
+                        <td>Fri</td>
+                        <td>9:00 AM - 3:00 PM, 5:00 PM - 12:00 AM</td>
+                    </tr>
+                    <tr>
+                        <td>Sat</td>
+                        <td>9:00 AM - 3:00 PM, 5:00 PM - 12:00 AM</td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
