--- a/src/html/rustico.html
+++ b/src/html/rustico.html
@@ -27,24 +27,40 @@
         <div class="card">
             <h2>HOURS</h2>
             <div class="hours">
-                <ul class="days">
-                    <li>Sun</li>
-                    <li>Mon</li>
-                    <li>Tue</li>
-                    <li>Wed</li>
-                    <li>Thu</li>
-                    <li>Fri</li>
-                    <li>Sat</li>
-                </ul>
-                <ul class="times">
-                    <li>7AM - 9PM</li>
-                    <li>Closed</li>
-                    <li>7AM - 9PM</li>
-                    <li>7AM - 9PM</li>
-                    <li>7AM - 9PM</li>
-                    <li>7AM - 9PM</li>
-                    <li>7AM - 9PM</li>
-                </ul>
+                <table class="hours-table">
+                    <tr>
+                        <th>Day</th>
+                        <th>Hours</th>
+                    </tr>
+                    <tr>
+                        <td>Sun</td>
+                        <td>7:00 AM - 9:00 PM</td>
+                    </tr>
+                    <tr>
+                        <td>Mon</td>
+                        <td>Closed</td>
+                    </tr>
+                    <tr>
+                        <td>Tue</td>
+                        <td>7:00 AM - 9:00 PM</td>
+                    </tr>
+                    <tr>
+                        <td>Wed</td>
+                        <td>7:00 AM - 9:00 PM</td>
+                    </tr>
+                    <tr>
+                        <td>Thu</td>
+                        <td>7:00 AM - 9:00 PM</td>
+                    </tr>
+                    <tr>
+                        <td>Fri</td>
+                        <td>7:00 AM - 9:00 PM</td>
+                    </tr>
+                    <tr>
+                        <td>Sat</td>
+                        <td>7:00 AM - 9:00 PM</td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
