--- a/src/html/maico.html
+++ b/src/html/maico.html
@@ -64,6 +64,9 @@
             </div>
         </div>
     </div>
+    <p>Watch vlogger Diane show the Miaco's experience</p>
+	<iframe width="400" height="200" src="https://www.youtube.com/watch?v=I5SvSTfPNHg">
+	</iframe>
     <div class="container2">
         <div class="card">
             <img class="img" src="..\imgs\maico_imgs\maico_exterior.jpg" alt="The exterior view of Maicos">
