--- a/src/html/maico.html
+++ b/src/html/maico.html
@@ -65,7 +65,9 @@
         </div>
     </div>
     <p>Watch vlogger Diane show the Miaco's experience</p>
-	<iframe width="400" height="200" src="https://www.youtube.com/watch?v=I5SvSTfPNHg">
+	<iframe width="460" height="250" 
+		src="https://www.youtube.com/embed/I5SvSTfPNHg?si=f3fX1QkzI2f4Ac5d&amp;start=295" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+		referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
 	</iframe>
     <div class="container2">
         <div class="card">
