--- a/src/html/rustico.html
+++ b/src/html/rustico.html
@@ -64,6 +64,11 @@
             </div>
         </div>
     </div>
+    <p>Watch this video to see what El Taco Rustico is all about</p>
+    <iframe width="460" height="250" 
+        src="https://www.youtube.com/embed/Polb2IQKEO0?si=62KLkY5FWF0rTQzf&amp;start=115" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+    </iframe>
     <div class="container2">
         <div class="card">
             <img class="img" src="..\imgs\rustico_imgs\rustico_chef.jpg" alt="">
