--- a/src/html/elnene.html
+++ b/src/html/elnene.html
@@ -64,6 +64,11 @@
             </div>
         </div>
     </div>
+    <p>Check out this video from vlogger Hungry Guy From Hawaii on their experience at Aqui Con El Nene</p>
+	<iframe width="460" height="250" 
+        src="https://www.youtube.com/embed/c-LCGpXZBcQ?si=0_iHbCG4v0-tL3Tn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+    </iframe>
     <div class="container2">
         <div class="card">
             <img class="img" src="..\imgs\elnene_imgs\nene_menu.jpg" alt="An image of the Aqui Con El Nene menu">
