--- a/src/html/lachingada.html
+++ b/src/html/lachingada.html
@@ -64,6 +64,11 @@
             </div>
         </div>
     </div>
+    <p>Watch this video to learn about how LA Chingada prepares their signiture dishes</p>
+	<iframe width="560" height="315" 
+        src="https://www.youtube.com/embed/Aye9PJym-28?si=jhjGHELiHqq3NqLm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+    </iframe>
     <div class="container2">
         <div class="card">
             <img class="img" src="../imgs/lachingada_imgs/1x1chilaquiles-divorciados.jpg" alt="">
