--- a/src/html/barrio.html
+++ b/src/html/barrio.html
@@ -64,6 +64,11 @@
             </div>
         </div>
     </div>
+    <p>Learn how Barrio Brewing Co expanded to making food</p>
+	<iframe width="560" height="315" 
+        src="https://www.youtube.com/embed/wGmlE9-XPUM?si=kwtLIyOGSNnkQ3n1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+    </iframe>
     <div class="container2">
         <div class="card">
             <img class="img" src="..\imgs\barrio_imgs\barrio_outside.jpg" alt="An image of what barrio brewing company looks like on the outside">
